[tool.poetry]
name = "livas-plots"
version = "0.1.0"
description = "A tool for plotting LIVAS files"
authors = ["Thanasis Georgiou <ageorgiou@noa.gr>"]
readme = "README.md"
packages = [{ include = "livas_plots" }]

[tool.poetry.scripts]
livas_plot = 'livas_plots:main'

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.3"
matplotlib = "^3.7.1"
Cartopy = "^0.21.1"
typer = "^0.9.0"
netCDF4 = "^1.6.3"
rich = "^13.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
